--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".QuizHomework"></activity>
-        <activity android:name=".Lecture" />
-        <activity android:name=".Tasks" />
+        <activity android:name=".QuizHomeworkActivity"></activity>
+        <activity android:name=".LectureActivity" />
+        <activity android:name=".TasksActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
