--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".QuizHomeworkActivity"></activity>
+        <activity android:name=".EndActivity"></activity>
+        <activity android:name=".QuizHomeworkActivity" />
         <activity android:name=".LectureActivity" />
         <activity android:name=".TasksActivity" />
         <activity android:name=".MainActivity">
