--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".ExtraCredit"></activity>
+        <activity android:name=".Main2Activity" />
         <activity android:name=".EndActivity" />
         <activity android:name=".QuizHomeworkActivity" />
         <activity android:name=".LectureActivity" />
